src/main/java/com/example/sos/employee/error/AlreadyExistEmployeeError.java
package com.example.sos.employee.error;

import com.example.sos.common.error.BaseError;

public class AlreadyExistEmployeeError extends BaseError {}
